--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
+    "@types/node-telegram-bot-api": "^0.64.8",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.9",
     "ts-node-dev": "^2.0.0",
@@ -27,6 +29,8 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "node-telegram-bot-api": "^0.66.0"
   }
 }
